Adapt code to 3.29.0